# dedupe-variable-embedding

./: LICENSE  README.md  pyproject.toml
embeddingvariable/: __init__.py
tests/: test_embedding.py
